--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <meta name="msapplication-config" content="favicon/browserconfig.xml" />
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Diverse</title>
   </head>
   <body>
     <div id="root"></div>
