--- a/index.html
+++ b/index.html
@@ -28,13 +28,30 @@
     />
     <link rel="shortcut icon" href="favicon/favicon.ico" />
     <meta name="msapplication-TileColor" content="#da532c" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <meta name="msapplication-config" content="favicon/browserconfig.xml" />
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Diverse</title>
+    <style>
+      :root {
+        font-family: Roboto, Inter, system-ui, Avenir, Helvetica, Arial,
+          sans-serif;
+      }
+
+      body {
+        margin: 0;
+      }
+
+      #root {
+        height: 100vh;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
