feat: DF-41 | [WIP]

--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
           opacity: 0.8;
           height: 2rem;
         }
+        90% {
+          opacity: 0.5;
+        }
         to {
           opacity: 0;
         }
