--- a/index.html
+++ b/index.html
@@ -1,44 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/public/favicon/favicon.svg" />
+    <link rel="manifest" href="/favicon/site.webmanifest" />
+    <meta name="msapplication-config" content="/favicon/browserconfig.xml" />
+    <link rel="shortcut icon" href="/favicon/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/favicon/favicon-16x16.png"
+    />
+    <link
+      rel="mask-icon"
+      href="/favicon/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Diverse</title>
+    <style>
+      :root {
+        font-family: Roboto, Inter, system-ui, Avenir, Helvetica, Arial,
+          sans-serif;
+      }
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/public/favicon/favicon.svg" />
-  <link rel="manifest" href="/favicon/site.webmanifest" />
-  <meta name="msapplication-config" content="/favicon/browserconfig.xml" />
-  <link rel="shortcut icon" href="/favicon/favicon.ico" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png" />
-  <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#5bbad5" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
-  <meta name="msapplication-TileColor" content="#da532c" />
-  <meta name="theme-color" content="#ffffff" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Diverse</title>
-  <style>
-    :root {
-      font-family: Roboto, Inter, system-ui, Avenir, Helvetica, Arial,
-        sans-serif;
-    }
+      #root {
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+      }
 
-    body {
-      margin: 0;
-    }
+      @keyframes big-to-small {
+        from {
+          height: 2rem;
+        }
+        to {
+          height: 1rem;
+        }
+      }
 
-    #root {
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
-  </style>
-</head>
+      @keyframes big-to-small-reverse {
+        from {
+          opacity: 1;
+          height: 1rem;
+        }
+        50% {
+          opacity: 1;
+          height: 1.5rem;
+        }
+        80% {
+          opacity: 0.8;
+          height: 2rem;
+        }
+        90% {
+          opacity: 0.5;
+        }
+        to {
+          opacity: 0;
+        }
+      }
 
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
-</body>
+      .animation {
+        animation: 300ms ease-in 0ms big-to-small;
+      }
 
+      .animation-reverse {
+        animation: 300ms ease-out 0ms big-to-small-reverse;
+      }
+    </style>
+  </head>
+
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
